--- a/main/article3.html
+++ b/main/article3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Article 3</title>
+    <title>Roronoa Zoro</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
@@ -13,11 +13,21 @@
       </ul>
     </nav>
     <div class="container">
-      <div class="article" id="article">
-        <h2 class="article-title">Article Title 3</h2>
-        <img class="article-image" src="img/image3.jpg" alt="Image 3">
-        <p class="article-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam euismod, tortor nec pharetra ultricies, ante erat imperdiet velit, nec laoreet enim lacus a velit.</p>
-      </div>
+        <div class="article" id="article">
+          <h1 class="article-title">Roronoa Zoro</h1>
+          <div class="article-content">
+            <img class="article-image" src="img/image3.png" alt="Image 3">
+            <p>Roronoa Zoro, also known as "Pirate Hunter" Zoro, is a fictional character in the One Piece franchise created by Eiichiro Oda. He is a swordsman and a member of the Straw Hat Pirates, serving as one of their two swordsmen and one of the Senior Officers of the Straw Hat Grand Fleet. He is publicly recognized as the right-hand man of his crew's captain Monkey D. Luffy. Formerly a bounty hunter, he is the second member of Luffy's crew and the first to join it.</p>
+
+            <p>Zoro has devoted his life to becoming the world's strongest swordsman. Even before joining the crew, he was well-renowned for his outstanding abilities and accomplishments in battle. His skills drastically improved after becoming the combatant of the Straw Hat Pirates and entering a two-year training period under the "Strongest Swordsman in the World", Dracule Mihawk.</p>
+
+            <p>Zoro is known for his mastery of Three Sword Style, a swordsmanship style which he created during his childhood training. He wields three swords at once - one in each hand and one in his mouth - to deliver powerful attacks to his enemies. In addition to his swordsmanship skills, Zoro also possesses immense physical strength and endurance.</p>
+
+            <p>Zoro's abilities include intelligence, tactical skills, wisdom, luck, lack of orientation, physical strength, speed and agility, durability and endurance. He is also skilled in several related fighting styles that form the greater part of his Three Sword Style fighting abilities. These include One Sword Style techniques that he uses with one sword.</p>
+
+            <p>In conclusion, Roronoa Zoro is a powerful character in One Piece with unique abilities and a strong determination to become the world's greatest swordsman. His mastery of Three Sword Style and his unwavering loyalty to his captain make him a formidable opponent and a valuable member of the Straw Hat Pirates.</p>
+          </div>
+        </div>
     </div>
   </body>
 </html>
