--- a/main/main.html
+++ b/main/main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Article 1</title>
+    <title>Kazuha's Quest for the Perfect Leaf</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
@@ -13,8 +13,8 @@
       </ul>
     </nav>
     <div class="container">
-        <div class="article" id="article1">
-          <h2 class="article-title">Kazuha's Quest for the Perfect Leaf</h2>
+        <div class="article" id="article">
+          <h1 class="article-title">Kazuha's Quest for the Perfect Leaf</h1>
           <div class="article-content">
             <img class="article-image" src="img/image1.jpg" alt="Image 1">
             <p>In the bustling town of Liyue, there lived a young man named Kazuha. He was known for his love of nature and his ability to find beauty in the simplest of things. But there was one thing that eluded him - a leaf that looked just like the hair of his friend Alhaitham.</p>
