--- a/main/article3.html
+++ b/main/article3.html
@@ -7,7 +7,8 @@
   <body>
     <nav>
       <ul>
-        <li><a href="main.html">Article 1</a></li>
+        <li><a href="main.html">Main</a></li>
+        <li><a href="article1.html">Article 1</a></li>
         <li><a href="article2.html">Article 2</a></li>
         <li><a href="article3.html">Article 3</a></li>
       </ul>
@@ -16,7 +17,7 @@
         <div class="article" id="article">
           <h1 class="article-title">Roronoa Zoro</h1>
           <div class="article-content">
-            <img class="article-image" src="img/image3.png" alt="Image 3">
+            <img class="article-image" src="img/image3.jpg" alt="Image 3">
             <p>Roronoa Zoro, also known as "Pirate Hunter" Zoro, is a fictional character in the One Piece franchise created by Eiichiro Oda. He is a swordsman and a member of the Straw Hat Pirates, serving as one of their two swordsmen and one of the Senior Officers of the Straw Hat Grand Fleet. He is publicly recognized as the right-hand man of his crew's captain Monkey D. Luffy. Formerly a bounty hunter, he is the second member of Luffy's crew and the first to join it.</p>
 
             <p>Zoro has devoted his life to becoming the world's strongest swordsman. Even before joining the crew, he was well-renowned for his outstanding abilities and accomplishments in battle. His skills drastically improved after becoming the combatant of the Straw Hat Pirates and entering a two-year training period under the "Strongest Swordsman in the World", Dracule Mihawk.</p>
