--- a/main/main.html
+++ b/main/main.html
@@ -1,49 +1,49 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Kazuha's Quest for the Perfect Leaf</title>
+    <title>Main</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <nav>
       <ul>
-        <li><a href="main.html">Article 1</a></li>
+        <li><a href="main.html">Main</a></li>
+        <li><a href="article1.html">Article 1</a></li>
         <li><a href="article2.html">Article 2</a></li>
         <li><a href="article3.html">Article 3</a></li>
       </ul>
     </nav>
-    <div class="container">
-        <div class="article" id="article">
-          <h1 class="article-title">Kazuha's Quest for the Perfect Leaf</h1>
-          <div class="article-content">
-            <img class="article-image" src="img/image1.jpg" alt="Image 1">
-            <p>In the bustling town of Liyue, there lived a young man named Kazuha. He was known for his love of nature and his ability to find beauty in the simplest of things. But there was one thing that eluded him - a leaf that looked just like the hair of his friend Alhaitham.</p>
-
-            <p>Kazuha had been banned from taking Alhaitham's hair, so he had to find another way. He grew desperate and began to resort to more unconventional methods.</p>
-
-            <p>One day, as he was walking through the market, he spotted several people wearing hats - Hu Tao, Scaramouche, Yanfei, and Qiqi. And there, nestled among the brims and feathers of their hats, were leaves that looked just like Alhaitham's hair.</p>
-
-            <p>Without thinking, Kazuha snatched their hats and ran off into the crowd. He didn't stop until he reached the safety of his home, where he carefully removed the leaves from the hats and held them up to the light.</p>
-
-            <p>But as he examined them more closely, he realized that they weren't quite right. The shapes were off and the colors were too dull. Kazuha sighed and placed the leaves in his collection, feeling defeated.</p>
-
-            <p>Just then, there was a knock at his door. It was Nahida, accompanied by Hu Tao, Scaramouche, Yanfei, and Qiqi.</p>
-
-            <p>"Kazuha," Nahida said sternly. "You can't keep doing this. These people want their hats back."</p>
-
-            <p>Kazuha hung his head in shame. He knew he had done wrong.</p>
-
-            <p>But then Nahida's expression softened. "I have something for you," she said.</p>
-
-            <p>She reached into her bag and pulled out a strand of Alhaitham's hair. "I asked him if I could have it for you," she explained.</p>
-
-            <p>Kazuha's eyes lit up as he took the strand of hair from Nahida. It was perfect - the exact shape and color he had been searching for.</p>
-
-            <p>"Thank you, Nahida," he said gratefully. "And I'm sorry to all of you," he added, turning to Hu Tao, Scaramouche, Yanfei, and Qiqi.</p>
-
-            <p>He returned their hats and they forgave him. And so, with Nahida's help, Kazuha finally found what he had been looking for and made amends for his mistakes. He placed the strand of hair in his collection and smiled contentedly. His quest was finally over.</p>
+    <div class="containerz">
+      <a href="article1.html">
+        <div class="card">
+          <div class="card-image">
+            <img src="img/image1.jpg" alt="Image 1">
+          </div>
+          <div class="category"> Kazuha </div>
+          <div class="heading"> Quest for the Perfect Leaf
           </div>
         </div>
+      </a>
+      <a href="article2.html">
+        <div class="card">
+          <div class="card-image">
+            <img src="img/image2.jpg" alt="Image 2">
+          </div>
+          <div class="category"> Fanny </div>
+          <div class="heading"> The Blade Dancer
+          </div>
+        </div>
+      </a>
+      <a href="article3.html">
+        <div class="card">
+          <div class="card-image">
+            <img src="img/image3.jpg" alt="Image 3">
+          </div>
+          <div class="category"> Zoro </div>
+          <div class="heading"> The Legendary Swordsman
+          </div>
+        </div>
+      </a>      
     </div>
   </body>
-</html>
+</html> 
