--- a/main/article2.html
+++ b/main/article2.html
@@ -7,7 +7,8 @@
   <body>
     <nav>
       <ul>
-        <li><a href="main.html">Article 1</a></li>
+        <li><a href="main.html">Main</a></li>
+        <li><a href="article1.html">Article 1</a></li>
         <li><a href="article2.html">Article 2</a></li>
         <li><a href="article3.html">Article 3</a></li>
       </ul>
