--- a/main/article1.html
+++ b/main/article1.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kazuha's Quest for the Perfect Leaf</title>
     <link rel="stylesheet" href="style.css">
   </head>
@@ -23,13 +26,13 @@
             <p>Kazuha had been banned from taking Alhaitham's hair, so he had to find another way. He grew desperate and began to resort to more unconventional methods.</p>
 
             <p>One day, as he was walking through the market, he spotted several people wearing hats - Hu Tao, Scaramouche, Yanfei, and Qiqi. And there, nestled among the brims and feathers of their hats, were leaves that looked just like Alhaitham's hair.</p>
-
+            <img class="article-image2" src="img/image4.jpg" alt="Image 4">
             <p>Without thinking, Kazuha snatched their hats and ran off into the crowd. He didn't stop until he reached the safety of his home, where he carefully removed the leaves from the hats and held them up to the light.</p>
 
             <p>But as he examined them more closely, he realized that they weren't quite right. The shapes were off and the colors were too dull. Kazuha sighed and placed the leaves in his collection, feeling defeated.</p>
 
             <p>Just then, there was a knock at his door. It was Nahida, accompanied by Hu Tao, Scaramouche, Yanfei, and Qiqi.</p>
-
+            
             <p>"Kazuha," Nahida said sternly. "You can't keep doing this. These people want their hats back."</p>
 
             <p>Kazuha hung his head in shame. He knew he had done wrong.</p>
