--- a/main/article2.html
+++ b/main/article2.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fanny: The Blade Dancer</title>
     <link rel="stylesheet" href="style.css">
   </head>
@@ -23,7 +26,7 @@
             <p>Fanny is an assassin hero who specializes in chase and reap. She is known for her agility and near ability of flight. Players who have seen her flying through the air refer to her as the Blade of Freedom. Fanny is considered a difficult hero to master, but those who do can achieve great results with her.</p>
 
             <p>Fanny has several abilities that allow her to quickly move around the battlefield and deal damage to her enemies. Her passive ability, Air Superiority, increases her damage while flying based on her flying speed and leaves a Prey Mark on her target. Each stack of Prey Mark on a target allows Fanny to regen energy when she deals damage to it.</p>
-
+            <img class="article-image2" src="img/image5.jpg" alt="Image 5">
             <p>Fanny's first skill, Tornado Strike, allows her to whirl her blade and deal physical damage to nearby enemies. Her second skill, Steel Cable, allows her to throw out a cable that draws her to the first obstacle it touches. Each successive use of this skill within 2 seconds decreases its energy cost and changes her flying direction. If she has enough energy and hits an enemy while flying, Tornado Strike will be triggered.</p>
 
             <p>Fanny's ultimate skill, Cut Throat, allows her to initiate a quick attack on an enemy, dealing physical damage. Each stack of Prey Mark on an enemy will increase her damage by 20%.</p>
