--- a/main/article3.html
+++ b/main/article3.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roronoa Zoro</title>
     <link rel="stylesheet" href="style.css">
   </head>
@@ -21,7 +24,7 @@
             <p>Roronoa Zoro, also known as "Pirate Hunter" Zoro, is a fictional character in the One Piece franchise created by Eiichiro Oda. He is a swordsman and a member of the Straw Hat Pirates, serving as one of their two swordsmen and one of the Senior Officers of the Straw Hat Grand Fleet. He is publicly recognized as the right-hand man of his crew's captain Monkey D. Luffy. Formerly a bounty hunter, he is the second member of Luffy's crew and the first to join it.</p>
 
             <p>Zoro has devoted his life to becoming the world's strongest swordsman. Even before joining the crew, he was well-renowned for his outstanding abilities and accomplishments in battle. His skills drastically improved after becoming the combatant of the Straw Hat Pirates and entering a two-year training period under the "Strongest Swordsman in the World", Dracule Mihawk.</p>
-
+            <img class="article-image2" src="img/image6.jpg" alt="Image 67">
             <p>Zoro is known for his mastery of Three Sword Style, a swordsmanship style which he created during his childhood training. He wields three swords at once - one in each hand and one in his mouth - to deliver powerful attacks to his enemies. In addition to his swordsmanship skills, Zoro also possesses immense physical strength and endurance.</p>
 
             <p>Zoro's abilities include intelligence, tactical skills, wisdom, luck, lack of orientation, physical strength, speed and agility, durability and endurance. He is also skilled in several related fighting styles that form the greater part of his Three Sword Style fighting abilities. These include One Sword Style techniques that he uses with one sword.</p>
